--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_4e2a1547.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_4e2a1547.ui
@@ -3,10 +3,9 @@
 #  -string -flagsOSRD
 preplace port S_AXI -pg 1 -y 40 -defaultsOSRD
 preplace port aclk -pg 1 -y 60 -defaultsOSRD
-preplace port aresetn -pg 1 -y 80 -defaultsOSRD
-preplace portBus Dout -pg 1 -y 60 -defaultsOSRD
+preplace portBus decimation -pg 1 -y 50 -defaultsOSRD
+preplace portBus aresetn -pg 1 -y 80 -defaultsOSRD
 preplace inst xlslice_0 -pg 1 -lvl 2 -y 50 -defaultsOSRD
-preplace inst xlslice_1 -pg 1 -lvl 2 -y 140 -defaultsOSRD
 preplace inst cfg -pg 1 -lvl 1 -y 60 -defaultsOSRD
 preplace netloc cfg_0_cfg_data 1 1 1 NJ
 preplace netloc ps_0_axi_periph_M00_AXI 1 0 1 NJ
@@ -16,3 +15,4 @@ preplace netloc xlslice_0_Dout 1 2 1 NJ
 levelinfo -pg 1 -10 120 340 460 -top -10 -bot 250
 ",
 }
+0
