--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_c18cdc96.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_c18cdc96.ui
@@ -1,69 +1,38 @@
 {
    guistr: "# # String gsaved with Nlview 6.5.12  2016-01-29 bk=1.3547 VDI=39 GEI=35 GUI=JA:1.6
 #  -string -flagsOSRD
-preplace port status1 -pg 1 -y 570 -defaultsOSRD
-preplace port M_AXI1 -pg 1 -y 770 -defaultsOSRD
+preplace port status1 -pg 1 -y 290 -defaultsOSRD
+preplace port M_AXI1 -pg 1 -y 320 -defaultsOSRD
 preplace port status -pg 1 -y 80 -defaultsOSRD
-preplace port S_AXI -pg 1 -y 480 -defaultsOSRD
-preplace port M_AXI -pg 1 -y 280 -defaultsOSRD
-preplace port int_clk -pg 1 -y 350 -defaultsOSRD
-preplace port aclk -pg 1 -y 450 -defaultsOSRD
-preplace port adc_csn -pg 1 -y 470 -defaultsOSRD
-preplace portBus adc_dat_a -pg 1 -y 370 -defaultsOSRD
-preplace portBus adc_dat_b -pg 1 -y 390 -defaultsOSRD
-preplace portBus active -pg 1 -y 490 -defaultsOSRD
-preplace portBus aresetn -pg 1 -y 500 -defaultsOSRD
-preplace inst channel_b|axis_dwidth_converter_0 -pg 1 -lvl 2 -y 750 -defaultsOSRD
-preplace inst channel_b|ram_b_address -pg 1 -lvl 2 -y 870 -defaultsOSRD
-preplace inst channel_a|axis_dwidth_converter_0 -pg 1 -lvl 2 -y 260 -defaultsOSRD
-preplace inst channel_b|sts_b_channel -pg 1 -lvl 2 -y 600 -defaultsOSRD
-preplace inst channel_a|ram_a_address -pg 1 -lvl 2 -y 380 -defaultsOSRD
-preplace inst adc_streamer -pg 1 -lvl 1 -y 360 -defaultsOSRD
-preplace inst channel_b|ch_b_writer -pg 1 -lvl 3 -y 780 -defaultsOSRD
-preplace inst channel_a -pg 1 -lvl 2 -y 100 -defaultsOSRD
-preplace inst channel_b|axis_decimator_0 -pg 1 -lvl 1 -y 650 -defaultsOSRD
-preplace inst channel_b -pg 1 -lvl 2 -y 590 -defaultsOSRD
-preplace inst config_settings -pg 1 -lvl 1 -y 500 -defaultsOSRD
-preplace inst channel_a|sts_a_channel -pg 1 -lvl 2 -y 110 -defaultsOSRD
-preplace inst channel_a|axis_decimator_0 -pg 1 -lvl 1 -y 240 -defaultsOSRD
-preplace inst channel_a|ch_a_writer -pg 1 -lvl 3 -y 290 -defaultsOSRD
-preplace netloc channel_b|axis_ram_writer_0_M_AXI 1 3 1 N
-preplace netloc channel_a|Conn1 1 0 2 N 80 N
-preplace netloc S_AXI_1 1 0 2 NJ 570 NJ
-preplace netloc channel_b|axis_decimator_0_m_axis 1 1 1 690
-preplace netloc channel_a|ram_a_address_dout 1 2 1 910
-preplace netloc channel_b|axis_dwidth_converter_0_M_AXIS 1 2 1 N
-preplace netloc channel_a|axis_ram_writer_0_M_AXI 1 3 1 N
-preplace netloc channel_a|aresetn_1 1 0 3 460 320 690 330 900
+preplace port S_AXI -pg 1 -y 190 -defaultsOSRD
+preplace port M_AXI -pg 1 -y 130 -defaultsOSRD
+preplace port int_clk -pg 1 -y 370 -defaultsOSRD
+preplace port aclk -pg 1 -y 20 -defaultsOSRD
+preplace port adc_csn -pg 1 -y 420 -defaultsOSRD
+preplace portBus enable -pg 1 -y 310 -defaultsOSRD
+preplace portBus adc_dat_a -pg 1 -y 390 -defaultsOSRD
+preplace portBus adc_dat_b -pg 1 -y 410 -defaultsOSRD
+preplace portBus aresetn -pg 1 -y 230 -defaultsOSRD
+preplace inst adc_streamer -pg 1 -lvl 1 -y 380 -defaultsOSRD
+preplace inst channel_a -pg 1 -lvl 2 -y 130 -defaultsOSRD
+preplace inst channel_b -pg 1 -lvl 2 -y 320 -defaultsOSRD
+preplace inst config_settings -pg 1 -lvl 1 -y 210 -defaultsOSRD
+preplace netloc S_AXI_1 1 0 2 NJ 290 NJ
 preplace netloc channel_b_M_AXI 1 2 1 NJ
-preplace netloc axis_red_pitaya_adc_0_adc_csn 1 1 2 NJ 470 NJ
-preplace netloc channel_a|adc_streamer_m00_axis 1 0 1 N
+preplace netloc axis_red_pitaya_adc_0_adc_csn 1 1 2 NJ 420 NJ
 preplace netloc adc_dat_a_i_1 1 0 1 NJ
-preplace netloc channel_b|cfg_data_1 1 0 1 N
-preplace netloc channel_b|ch_a_writer_sts_data 1 1 3 710 920 N 920 1180
-preplace netloc channel_b|ram_a_address_dout 1 2 1 920
-preplace netloc channel_a|axis_dwidth_converter_0_M_AXIS 1 2 1 N
-preplace netloc channel_a|ch_a_writer_sts_data 1 1 3 700 430 N 430 1170
-preplace netloc channel_b|Conn1 1 0 2 N 570 N
-preplace netloc adc_streamer_m00_axis 1 1 1 250
+preplace netloc adc_streamer_m00_axis 1 1 1 290
 preplace netloc ps_0_axi_periph_M00_AXI 1 0 1 NJ
-preplace netloc xlconstant_0_dout 1 0 2 -40 590 280
-preplace netloc channel_b|aresetn_1 1 0 3 460 740 700 820 910
-preplace netloc channel_b|clk_sync_clk_out1 1 0 3 450 730 680 680 910
-preplace netloc s00_axis_1 1 1 1 260
+preplace netloc xlconstant_0_dout 1 0 2 NJ 300 330
+preplace netloc s00_axis_1 1 1 1 310
 preplace netloc clk_wiz_0_clk_out1 1 0 1 NJ
-preplace netloc channel_b|adc_streamer_m00_axis 1 0 1 450
-preplace netloc channel_a|axis_decimator_0_m_axis 1 1 1 N
 preplace netloc ps_axi_periph_M01_AXI 1 0 2 NJ 80 NJ
 preplace netloc adc_dat_b_i_1 1 0 1 NJ
-preplace netloc channel_a|clk_sync_clk_out1 1 0 3 450 160 680 190 900
-preplace netloc channel_a|cfg_data_1 1 0 1 N
+preplace netloc aresetn2_1 1 0 2 20 280 340
 preplace netloc axis_ram_writer_0_M_AXI 1 2 1 NJ
-preplace netloc config_settings_enable 1 1 2 NJ 480 NJ
-preplace netloc clk_sync_clk_out1 1 0 3 -30 580 300 460 NJ
-preplace netloc xlslice_0_Dout 1 1 1 270
-levelinfo -pg 1 -60 120 510 1300 -top 0 -bot 950
-levelinfo -hier channel_a * 570 800 1040 *
-levelinfo -hier channel_b * 570 810 1050 *
+preplace netloc clk_sync_clk_out1 1 0 3 20 130 300 20 NJ
+preplace netloc xlslice_0_Dout 1 1 1 320
+levelinfo -pg 1 0 160 460 600 -top 0 -bot 460
 ",
 }
+0
