--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_c954508f.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_c954508f.ui
@@ -5,64 +5,65 @@ preplace port adc_enc_p_o -pg 1 -y 40 -defaultsOSRD
 preplace port DDR -pg 1 -y 80 -defaultsOSRD
 preplace port Vp_Vn -pg 1 -y 100 -defaultsOSRD
 preplace port Vaux0 -pg 1 -y 20 -defaultsOSRD
-preplace port adc_csn_o -pg 1 -y 120 -defaultsOSRD
+preplace port adc_csn_o -pg 1 -y 140 -defaultsOSRD
 preplace port Vaux1 -pg 1 -y 40 -defaultsOSRD
-preplace port adc_clk_p_i -pg 1 -y 140 -defaultsOSRD
-preplace port dac_rst_o -pg 1 -y 190 -defaultsOSRD
-preplace port dac_clk_o -pg 1 -y 170 -defaultsOSRD
+preplace port adc_clk_p_i -pg 1 -y 270 -defaultsOSRD
+preplace port dac_rst_o -pg 1 -y 370 -defaultsOSRD
+preplace port dac_clk_o -pg 1 -y 350 -defaultsOSRD
 preplace port adc_enc_n_o -pg 1 -y 20 -defaultsOSRD
 preplace port FIXED_IO -pg 1 -y 100 -defaultsOSRD
-preplace port dac_sel_o -pg 1 -y 210 -defaultsOSRD
-preplace port dac_wrt_o -pg 1 -y 230 -defaultsOSRD
+preplace port dac_sel_o -pg 1 -y 390 -defaultsOSRD
+preplace port dac_wrt_o -pg 1 -y 410 -defaultsOSRD
 preplace port Vaux8 -pg 1 -y 60 -defaultsOSRD
-preplace port adc_clk_n_i -pg 1 -y 160 -defaultsOSRD
+preplace port adc_clk_n_i -pg 1 -y 290 -defaultsOSRD
 preplace port Vaux9 -pg 1 -y 80 -defaultsOSRD
-preplace portBus daisy_n_i -pg 1 -y 490 -defaultsOSRD
-preplace portBus adc_dat_b_i -pg 1 -y 230 -defaultsOSRD
-preplace portBus exp_p_tri_io -pg 1 -y 370 -defaultsOSRD
-preplace portBus exp_n_tri_io -pg 1 -y 350 -defaultsOSRD
-preplace portBus daisy_p_o -pg 1 -y 470 -defaultsOSRD
-preplace portBus led_o -pg 1 -y 140 -defaultsOSRD
+preplace portBus daisy_n_i -pg 1 -y 540 -defaultsOSRD
+preplace portBus adc_dat_b_i -pg 1 -y 210 -defaultsOSRD
+preplace portBus exp_p_tri_io -pg 1 -y 220 -defaultsOSRD
+preplace portBus exp_n_tri_io -pg 1 -y 200 -defaultsOSRD
+preplace portBus daisy_p_o -pg 1 -y 520 -defaultsOSRD
+preplace portBus led_o -pg 1 -y 120 -defaultsOSRD
 preplace portBus dac_pwm_o -pg 1 -y 60 -defaultsOSRD
-preplace portBus daisy_n_o -pg 1 -y 490 -defaultsOSRD
-preplace portBus adc_dat_a_i -pg 1 -y 210 -defaultsOSRD
-preplace portBus dac_dat_o -pg 1 -y 250 -defaultsOSRD
-preplace portBus daisy_p_i -pg 1 -y 470 -defaultsOSRD
-preplace inst daisy_chain -pg 1 -lvl 4 -y 480 -defaultsOSRD
+preplace portBus daisy_n_o -pg 1 -y 540 -defaultsOSRD
+preplace portBus adc_dat_a_i -pg 1 -y 190 -defaultsOSRD
+preplace portBus dac_dat_o -pg 1 -y 430 -defaultsOSRD
+preplace portBus daisy_p_i -pg 1 -y 520 -defaultsOSRD
+preplace inst daisy_chain -pg 1 -lvl 4 -y 530 -defaultsOSRD
 preplace inst processing_system -pg 1 -lvl 3 -y 150 -defaultsOSRD
-preplace inst clocking_system -pg 1 -lvl 1 -y 150 -defaultsOSRD
-preplace inst gpio_interface -pg 1 -lvl 4 -y 360 -defaultsOSRD
-preplace inst signal_generator -pg 1 -lvl 4 -y 210 -defaultsOSRD
-preplace inst receive_chain -pg 1 -lvl 2 -y 170 -defaultsOSRD
-preplace netloc S_AXI_1 1 1 3 260 280 NJ 280 780
-preplace netloc S_AXI_2 1 3 1 810
+preplace inst clocking_system -pg 1 -lvl 1 -y 280 -defaultsOSRD
+preplace inst gpio_interface -pg 1 -lvl 4 -y 220 -defaultsOSRD
+preplace inst signal_generator -pg 1 -lvl 4 -y 390 -defaultsOSRD
+preplace inst receive_chain -pg 1 -lvl 2 -y 160 -defaultsOSRD
+preplace netloc S_AXI_1 1 1 3 260 280 NJ 280 790
+preplace netloc S_AXI_2 1 3 1 N
 preplace netloc axis_red_pitaya_dac_0_dac_rst 1 4 1 NJ
 preplace netloc axis_red_pitaya_dac_0_dac_sel 1 4 1 NJ
 preplace netloc channel_b_M_AXI 1 2 1 N
 preplace netloc axis_red_pitaya_dac_0_dac_wrt 1 4 1 NJ
-preplace netloc axis_red_pitaya_adc_0_adc_csn 1 2 3 NJ 270 NJ 110 NJ
+preplace netloc axis_red_pitaya_adc_0_adc_csn 1 2 3 NJ 270 NJ 140 NJ
 preplace netloc adc_clk_n_i_1 1 0 1 NJ
-preplace netloc daisy_p_i_1 1 0 4 NJ 470 NJ 470 NJ 470 NJ
-preplace netloc adc_dat_a_i_1 1 0 2 NJ 210 NJ
-preplace netloc processing_system_M03_AXI 1 3 1 810
+preplace netloc daisy_p_i_1 1 0 4 NJ 520 NJ 520 NJ 520 NJ
+preplace netloc adc_dat_a_i_1 1 0 2 NJ 190 NJ
+preplace netloc processing_system_M03_AXI 1 3 1 820
 preplace netloc util_ds_buf_2_OBUF_DS_N 1 4 1 NJ
-preplace netloc ps_0_axi_periph_M00_AXI 1 1 3 250 10 NJ 10 790
-preplace netloc xlconstant_0_dout 1 1 3 270 300 NJ 300 790
+preplace netloc ps_0_axi_periph_M00_AXI 1 1 3 250 20 NJ 20 790
+preplace netloc xlconstant_0_dout 1 1 3 280 310 NJ 310 800
 preplace netloc clk_wiz_0_clk_out1 1 1 1 240
 preplace netloc util_ds_buf_2_OBUF_DS_P 1 4 1 NJ
 preplace netloc ps_0_DDR 1 3 2 NJ 80 NJ
-preplace netloc ps_axi_periph_M01_AXI 1 1 3 260 20 NJ 20 780
+preplace netloc ps_axi_periph_M01_AXI 1 1 3 240 10 NJ 10 800
 preplace netloc Net1 1 4 1 NJ
 preplace netloc Net 1 4 1 NJ
-preplace netloc adc_dat_b_i_1 1 0 2 NJ 230 NJ
+preplace netloc adc_dat_b_i_1 1 0 2 NJ 210 NJ
 preplace netloc ps_0_FIXED_IO 1 3 2 NJ 100 NJ
 preplace netloc axis_red_pitaya_dac_0_dac_clk 1 4 1 NJ
 preplace netloc axis_ram_writer_0_M_AXI 1 2 1 N
+preplace netloc enable_1 1 1 4 270 300 NJ 300 840 290 1120
 preplace netloc axis_red_pitaya_dac_0_dac_dat 1 4 1 NJ
 preplace netloc adc_clk_p_i_1 1 0 1 NJ
-preplace netloc clk_sync_clk_out1 1 2 2 520 290 820
-preplace netloc daisy_n_i_1 1 0 4 NJ 490 NJ 490 NJ 490 NJ
-levelinfo -pg 1 0 130 390 650 960 1120 -top 0 -bot 540
+preplace netloc clk_sync_clk_out1 1 2 2 530 290 830
+preplace netloc daisy_n_i_1 1 0 4 NJ 540 NJ 540 NJ 540 NJ
+levelinfo -pg 1 0 130 400 660 980 1140 -top 0 -bot 590
 ",
 }
 0
