--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_ce31d78.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_ce31d78.ui
@@ -3,23 +3,26 @@
 #  -string -flagsOSRD
 preplace port S_AXI -pg 1 -y 40 -defaultsOSRD
 preplace port aclk -pg 1 -y 60 -defaultsOSRD
+preplace portBus enable -pg 1 -y 250 -defaultsOSRD
 preplace portBus exp_data_n -pg 1 -y 60 -defaultsOSRD
 preplace portBus exp_data_p -pg 1 -y 130 -defaultsOSRD
 preplace portBus aresetn -pg 1 -y 80 -defaultsOSRD
 preplace inst gpio_register -pg 1 -lvl 1 -y 60 -defaultsOSRD
 preplace inst xlslice_0 -pg 1 -lvl 2 -y 40 -defaultsOSRD
 preplace inst xlslice_1 -pg 1 -lvl 2 -y 130 -defaultsOSRD
+preplace inst enable_receive -pg 1 -lvl 2 -y 250 -defaultsOSRD
 preplace inst exp_interface_0 -pg 1 -lvl 3 -y 40 -defaultsOSRD
 preplace inst exp_interface_1 -pg 1 -lvl 3 -y 130 -defaultsOSRD
 preplace netloc xlslice_1_Dout 1 2 1 N
 preplace netloc processing_system_M04_AXI 1 0 1 NJ
 preplace netloc axi_cfg_register_0_cfg_data 1 1 1 NJ
 preplace netloc xlconstant_0_dout 1 0 1 NJ
+preplace netloc xlslice_2_Dout 1 2 2 NJ 250 NJ
 preplace netloc Net1 1 3 1 N
 preplace netloc Net 1 3 1 NJ
 preplace netloc clk_sync_clk_out1 1 0 1 NJ
 preplace netloc xlslice_0_Dout 1 2 1 NJ
-levelinfo -pg 1 -10 120 370 640 790 -top -10 -bot 270
+levelinfo -pg 1 -10 120 370 640 790 -top -10 -bot 300
 ",
 }
 0
