--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_f066970c.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_f066970c.ui
@@ -5,8 +5,9 @@ preplace port adc_data -pg 1 -y 60 -defaultsOSRD
 preplace port status -pg 1 -y 230 -defaultsOSRD
 preplace port M_AXI -pg 1 -y 180 -defaultsOSRD
 preplace port aclk -pg 1 -y 80 -defaultsOSRD
+preplace portBus enable -pg 1 -y 100 -defaultsOSRD
 preplace portBus decimation -pg 1 -y 120 -defaultsOSRD
-preplace portBus aresetn -pg 1 -y 100 -defaultsOSRD
+preplace portBus aresetn -pg 1 -y 270 -defaultsOSRD
 preplace inst ch_a_writer -pg 1 -lvl 3 -y 190 -defaultsOSRD
 preplace inst ram_a_address -pg 1 -lvl 2 -y 390 -defaultsOSRD
 preplace inst axis_decimator_0 -pg 1 -lvl 1 -y 90 -defaultsOSRD
@@ -18,10 +19,12 @@ preplace netloc axis_dwidth_converter_0_M_AXIS 1 2 1 460
 preplace netloc adc_streamer_m00_axis 1 0 1 NJ
 preplace netloc cfg_data_1 1 0 1 NJ
 preplace netloc axis_decimator_0_m_axis 1 1 1 N
-preplace netloc aresetn_1 1 0 3 20 240 250 340 NJ
-preplace netloc ch_a_writer_sts_data 1 1 3 260 440 NJ 440 730
+preplace netloc aresetn_1 1 0 3 20 170 250 180 NJ
+preplace netloc ch_a_writer_sts_data 1 1 3 260 40 NJ 40 730
 preplace netloc axis_ram_writer_0_M_AXI 1 3 1 N
-preplace netloc clk_sync_clk_out1 1 0 3 20 10 240 180 NJ
+preplace netloc aresetn1_1 1 0 2 NJ 270 NJ
+preplace netloc clk_sync_clk_out1 1 0 3 20 10 240 30 NJ
 levelinfo -pg 1 0 130 360 600 750 -top 0 -bot 450
 ",
 }
+0
