--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_fb2f504b.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_fb2f504b.ui
@@ -1,32 +1,35 @@
 {
    guistr: "# # String gsaved with Nlview 6.5.12  2016-01-29 bk=1.3547 VDI=39 GEI=35 GUI=JA:1.6
 #  -string -flagsOSRD
-preplace port dac_clk -pg 1 -y 40 -defaultsOSRD
-preplace port S_AXI -pg 1 -y 260 -defaultsOSRD
-preplace port dac_sel -pg 1 -y 80 -defaultsOSRD
-preplace port dac_wrt -pg 1 -y 100 -defaultsOSRD
-preplace port dac_rst -pg 1 -y 60 -defaultsOSRD
-preplace port aclk -pg 1 -y 50 -defaultsOSRD
-preplace portBus dac_dat -pg 1 -y 120 -defaultsOSRD
-preplace portBus aresetn -pg 1 -y 300 -defaultsOSRD
-preplace inst dds_compiler_0 -pg 1 -lvl 1 -y 10 -defaultsOSRD
-preplace inst sig_gen_config -pg 1 -lvl 1 -y 440 -defaultsOSRD
-preplace inst axis_constant_0 -pg 1 -lvl 2 -y 260 -defaultsOSRD
-preplace inst clk_wiz_1 -pg 1 -lvl 1 -y 320 -defaultsOSRD
-preplace inst axis_red_pitaya_dac_0 -pg 1 -lvl 2 -y 90 -defaultsOSRD
+preplace port dac_clk -pg 1 -y 60 -defaultsOSRD
+preplace port S_AXI -pg 1 -y 40 -defaultsOSRD
+preplace port dac_sel -pg 1 -y 100 -defaultsOSRD
+preplace port dac_wrt -pg 1 -y 120 -defaultsOSRD
+preplace port dac_rst -pg 1 -y 80 -defaultsOSRD
+preplace port aclk -pg 1 -y 80 -defaultsOSRD
+preplace portBus enable -pg 1 -y 10 -defaultsOSRD
+preplace portBus dac_dat -pg 1 -y 140 -defaultsOSRD
+preplace portBus aresetn -pg 1 -y 100 -defaultsOSRD
+preplace inst dds_compiler_0 -pg 1 -lvl 3 -y 70 -defaultsOSRD
+preplace inst sig_gen_config -pg 1 -lvl 1 -y 80 -defaultsOSRD
+preplace inst axis_constant_0 -pg 1 -lvl 2 -y 60 -defaultsOSRD
+preplace inst clk_wiz_1 -pg 1 -lvl 3 -y 200 -defaultsOSRD
+preplace inst axis_red_pitaya_dac_0 -pg 1 -lvl 4 -y 100 -defaultsOSRD
 preplace netloc Conn1 1 0 1 NJ
-preplace netloc axis_red_pitaya_dac_0_dac_rst 1 2 1 NJ
-preplace netloc axis_red_pitaya_dac_0_dac_sel 1 2 1 NJ
-preplace netloc axis_red_pitaya_dac_0_dac_wrt 1 2 1 NJ
-preplace netloc axis_constant_0_M_AXIS 1 0 3 -240 70 NJ -20 490
-preplace netloc clk_wiz_1_locked 1 1 1 110
-preplace netloc clk_wiz_1_clk_out1 1 1 1 90
-preplace netloc aresetn_1 1 0 1 NJ
-preplace netloc dds_compiler_0_M_AXIS_DATA 1 1 1 110
-preplace netloc sig_gen_config_cfg_data 1 1 1 120
-preplace netloc axis_red_pitaya_dac_0_dac_clk 1 2 1 NJ
-preplace netloc axis_red_pitaya_dac_0_dac_dat 1 2 1 NJ
-preplace netloc clk_sync_clk_out1 1 0 2 -250 110 NJ
-levelinfo -pg 1 -290 -50 340 520 -top -50 -bot 530
+preplace netloc axis_red_pitaya_dac_0_dac_rst 1 4 1 NJ
+preplace netloc axis_red_pitaya_dac_0_dac_sel 1 4 1 NJ
+preplace netloc axis_red_pitaya_dac_0_dac_wrt 1 4 1 NJ
+preplace netloc axis_constant_0_M_AXIS 1 2 1 480
+preplace netloc clk_wiz_1_locked 1 3 1 790
+preplace netloc clk_wiz_1_clk_out1 1 3 1 780
+preplace netloc aresetn_1 1 0 1 N
+preplace netloc dds_compiler_0_M_AXIS_DATA 1 3 1 N
+preplace netloc sig_gen_config_cfg_data 1 1 1 250
+preplace netloc axis_red_pitaya_dac_0_dac_clk 1 4 1 NJ
+preplace netloc aresetn1_1 1 0 3 NJ 10 NJ 120 NJ
+preplace netloc axis_red_pitaya_dac_0_dac_dat 1 4 1 NJ
+preplace netloc clk_sync_clk_out1 1 0 4 10 0 250 0 490 0 780
+levelinfo -pg 1 -20 130 370 640 900 1030 -top -10 -bot 260
 ",
 }
+0
