--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_b4895856.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_b4895856.ui
@@ -4,16 +4,16 @@
 preplace port CLK -pg 1 -y 50 -defaultsOSRD
 preplace portBus enable -pg 1 -y 70 -defaultsOSRD
 preplace portBus CRF -pg 1 -y 70 -defaultsOSRD
-preplace inst util_vector_logic_0 -pg 1 -lvl 1 -y 110 -defaultsOSRD
-preplace inst util_vector_logic_1 -pg 1 -lvl 4 -y 70 -defaultsOSRD
-preplace inst n -pg 1 -lvl 3 -y 70 -defaultsOSRD
-preplace inst c_counter_binary_0 -pg 1 -lvl 2 -y 70 -defaultsOSRD
+preplace inst init_logic_high -pg 1 -lvl 4 -y 70 -defaultsOSRD
+preplace inst reset_counter -pg 1 -lvl 1 -y 110 -defaultsOSRD
+preplace inst binary_counter -pg 1 -lvl 2 -y 70 -defaultsOSRD
+preplace inst freq_divider_n -pg 1 -lvl 3 -y 70 -defaultsOSRD
 preplace netloc enable_2 1 0 2 20 60 NJ
 preplace netloc util_vector_logic_0_Res 1 1 1 NJ
 preplace netloc c_counter_binary_0_Q 1 2 1 NJ
 preplace netloc util_vector_logic_1_Res 1 4 1 NJ
 preplace netloc n_Dout 1 3 1 NJ
-preplace netloc clk_sync_clk_out1 1 0 2 NJ 50 NJ
+preplace netloc clk_sync_clk_out1 1 0 2 NJ 40 NJ
 levelinfo -pg 1 0 140 350 550 780 920 -top 0 -bot 160
 ",
 }
