--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_c954508f.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_c954508f.ui
@@ -8,63 +8,64 @@ preplace port Vaux0 -pg 1 -y 20 -defaultsOSRD
 preplace port adc_csn_o -pg 1 -y 260 -defaultsOSRD
 preplace port Vaux1 -pg 1 -y 40 -defaultsOSRD
 preplace port adc_clk_p_i -pg 1 -y 100 -defaultsOSRD
-preplace port dac_rst_o -pg 1 -y 350 -defaultsOSRD
-preplace port dac_clk_o -pg 1 -y 330 -defaultsOSRD
+preplace port dac_rst_o -pg 1 -y 360 -defaultsOSRD
+preplace port dac_clk_o -pg 1 -y 340 -defaultsOSRD
 preplace port adc_enc_n_o -pg 1 -y 20 -defaultsOSRD
 preplace port FIXED_IO -pg 1 -y 110 -defaultsOSRD
-preplace port dac_sel_o -pg 1 -y 370 -defaultsOSRD
-preplace port dac_wrt_o -pg 1 -y 390 -defaultsOSRD
+preplace port dac_sel_o -pg 1 -y 380 -defaultsOSRD
+preplace port dac_wrt_o -pg 1 -y 400 -defaultsOSRD
 preplace port Vaux8 -pg 1 -y 60 -defaultsOSRD
 preplace port adc_clk_n_i -pg 1 -y 120 -defaultsOSRD
 preplace port Vaux9 -pg 1 -y 80 -defaultsOSRD
-preplace portBus daisy_n_i -pg 1 -y 520 -defaultsOSRD
+preplace portBus daisy_n_i -pg 1 -y 540 -defaultsOSRD
 preplace portBus adc_dat_b_i -pg 1 -y 190 -defaultsOSRD
 preplace portBus exp_p_tri_io -pg 1 -y 190 -defaultsOSRD
 preplace portBus exp_n_tri_io -pg 1 -y 170 -defaultsOSRD
-preplace portBus daisy_p_o -pg 1 -y 500 -defaultsOSRD
+preplace portBus daisy_p_o -pg 1 -y 520 -defaultsOSRD
 preplace portBus led_o -pg 1 -y 130 -defaultsOSRD
 preplace portBus dac_pwm_o -pg 1 -y 60 -defaultsOSRD
-preplace portBus daisy_n_o -pg 1 -y 520 -defaultsOSRD
+preplace portBus daisy_n_o -pg 1 -y 540 -defaultsOSRD
 preplace portBus adc_dat_a_i -pg 1 -y 170 -defaultsOSRD
-preplace portBus dac_dat_o -pg 1 -y 410 -defaultsOSRD
-preplace portBus daisy_p_i -pg 1 -y 500 -defaultsOSRD
-preplace inst daisy_chain -pg 1 -lvl 4 -y 510 -defaultsOSRD
-preplace inst processing_system -pg 1 -lvl 3 -y 170 -defaultsOSRD
+preplace portBus dac_dat_o -pg 1 -y 420 -defaultsOSRD
+preplace portBus daisy_p_i -pg 1 -y 520 -defaultsOSRD
+preplace inst daisy_chain -pg 1 -lvl 4 -y 530 -defaultsOSRD
+preplace inst processing_system -pg 1 -lvl 3 -y 180 -defaultsOSRD
 preplace inst clocking_system -pg 1 -lvl 1 -y 110 -defaultsOSRD
 preplace inst gpio_interface -pg 1 -lvl 4 -y 190 -defaultsOSRD
-preplace inst signal_generator -pg 1 -lvl 4 -y 370 -defaultsOSRD
+preplace inst signal_generator -pg 1 -lvl 4 -y 380 -defaultsOSRD
 preplace inst receive_chain -pg 1 -lvl 2 -y 160 -defaultsOSRD
-preplace netloc S_AXI_1 1 1 3 250 10 NJ 10 860
-preplace netloc S_AXI_2 1 3 1 880
+preplace netloc S_AXI_1 1 1 3 250 10 NJ 10 880
+preplace netloc S_AXI2_1 1 3 1 890
+preplace netloc S_AXI_2 1 3 1 890
 preplace netloc axis_red_pitaya_dac_0_dac_rst 1 4 1 NJ
 preplace netloc axis_red_pitaya_dac_0_dac_sel 1 4 1 NJ
-preplace netloc channel_b_M_AXI 1 2 1 560
+preplace netloc channel_b_M_AXI 1 2 1 590
 preplace netloc axis_red_pitaya_dac_0_dac_wrt 1 4 1 NJ
 preplace netloc axis_red_pitaya_adc_0_adc_csn 1 2 3 NJ 20 NJ 20 NJ
 preplace netloc adc_clk_n_i_1 1 0 1 NJ
-preplace netloc daisy_p_i_1 1 0 4 NJ 500 NJ 500 NJ 500 NJ
+preplace netloc daisy_p_i_1 1 0 4 NJ 520 NJ 520 NJ 520 NJ
 preplace netloc adc_dat_a_i_1 1 0 2 NJ 170 NJ
-preplace netloc processing_system_M03_AXI 1 3 1 900
+preplace netloc processing_system_M03_AXI 1 3 1 880
 preplace netloc util_ds_buf_2_OBUF_DS_N 1 4 1 NJ
-preplace netloc ps_0_axi_periph_M00_AXI 1 1 3 270 310 NJ 310 870
-preplace netloc xlconstant_0_dout 1 1 3 250 330 NJ 330 890
+preplace netloc ps_0_axi_periph_M00_AXI 1 1 3 260 30 NJ 30 860
+preplace netloc xlconstant_0_dout 1 1 3 280 340 NJ 340 920
 preplace netloc clk_wiz_0_clk_out1 1 1 1 240
 preplace netloc util_ds_buf_2_OBUF_DS_P 1 4 1 NJ
 preplace netloc ps_0_DDR 1 3 2 NJ 90 NJ
-preplace netloc ps_axi_periph_M01_AXI 1 1 3 260 300 NJ 300 850
+preplace netloc ps_axi_periph_M01_AXI 1 1 3 270 320 NJ 320 860
 preplace netloc Net1 1 4 1 NJ
 preplace netloc Net 1 4 1 NJ
 preplace netloc adc_dat_b_i_1 1 0 2 NJ 190 NJ
 preplace netloc ps_0_FIXED_IO 1 3 2 NJ 110 NJ
-preplace netloc processing_system_M05_AXI 1 3 1 880
+preplace netloc processing_system_M05_AXI 1 3 1 900
 preplace netloc axis_red_pitaya_dac_0_dac_clk 1 4 1 NJ
-preplace netloc axis_ram_writer_0_M_AXI 1 2 1 580
-preplace netloc enable_1 1 1 4 280 320 NJ 320 920 260 1200
+preplace netloc axis_ram_writer_0_M_AXI 1 2 1 600
+preplace netloc enable_1 1 1 4 290 350 NJ 350 870 260 1200
 preplace netloc axis_red_pitaya_dac_0_dac_dat 1 4 1 NJ
 preplace netloc adc_clk_p_i_1 1 0 1 NJ
-preplace netloc clk_sync_clk_out1 1 2 2 590 30 910
-preplace netloc daisy_n_i_1 1 0 4 NJ 520 NJ 520 NJ 520 NJ
-levelinfo -pg 1 0 130 420 720 1060 1230 -top 0 -bot 570
+preplace netloc clk_sync_clk_out1 1 2 2 570 330 910
+preplace netloc daisy_n_i_1 1 0 4 NJ 540 NJ 540 NJ 540 NJ
+levelinfo -pg 1 0 130 430 730 1060 1230 -top 0 -bot 590
 ",
 }
 0
