--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_fb2f504b.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_fb2f504b.ui
@@ -1,49 +1,51 @@
 {
    guistr: "# # String gsaved with Nlview 6.5.12  2016-01-29 bk=1.3547 VDI=39 GEI=35 GUI=JA:1.6
 #  -string -flagsOSRD
+preplace port c_phase_off -pg 1 -y 60 -defaultsOSRD
+preplace port c_phase_inc -pg 1 -y 190 -defaultsOSRD
 preplace port dac_clk -pg 1 -y 210 -defaultsOSRD
-preplace port S_AXI -pg 1 -y 180 -defaultsOSRD
 preplace port dac_sel -pg 1 -y 250 -defaultsOSRD
 preplace port dac_wrt -pg 1 -y 270 -defaultsOSRD
 preplace port dac_rst -pg 1 -y 230 -defaultsOSRD
-preplace port aclk -pg 1 -y 200 -defaultsOSRD
-preplace port S_AXI1 -pg 1 -y 50 -defaultsOSRD
-preplace portBus enable -pg 1 -y 370 -defaultsOSRD
+preplace port aclk -pg 1 -y 20 -defaultsOSRD
+preplace port r_phase_inc -pg 1 -y 330 -defaultsOSRD
+preplace portBus enable -pg 1 -y 280 -defaultsOSRD
 preplace portBus dac_dat -pg 1 -y 290 -defaultsOSRD
-preplace portBus aresetn -pg 1 -y 220 -defaultsOSRD
-preplace inst canc_const -pg 1 -lvl 2 -y 80 -defaultsOSRD
-preplace inst ref_cfg -pg 1 -lvl 1 -y 200 -defaultsOSRD
+preplace portBus aresetn -pg 1 -y 210 -defaultsOSRD
+preplace inst canc_const -pg 1 -lvl 2 -y 200 -defaultsOSRD
 preplace inst dac_signal_combiner -pg 1 -lvl 4 -y 220 -defaultsOSRD
-preplace inst xlconstant_0 -pg 1 -lvl 1 -y 320 -defaultsOSRD
-preplace inst phase_ramp -pg 1 -lvl 2 -y 310 -defaultsOSRD
-preplace inst cancellation_signal -pg 1 -lvl 3 -y 340 -defaultsOSRD
-preplace inst canc_cfg -pg 1 -lvl 1 -y 70 -defaultsOSRD
-preplace inst ref_const -pg 1 -lvl 2 -y 190 -defaultsOSRD
-preplace inst reference_signal -pg 1 -lvl 3 -y 190 -defaultsOSRD
+preplace inst ref_phase_inc -pg 1 -lvl 1 -y 350 -defaultsOSRD
+preplace inst cancellation_signal -pg 1 -lvl 3 -y 210 -defaultsOSRD
+preplace inst phase_const -pg 1 -lvl 2 -y 90 -defaultsOSRD
+preplace inst canc_phase_inc -pg 1 -lvl 1 -y 210 -defaultsOSRD
+preplace inst ref_const -pg 1 -lvl 2 -y 340 -defaultsOSRD
+preplace inst reference_signal -pg 1 -lvl 3 -y 360 -defaultsOSRD
 preplace inst clk_wiz_1 -pg 1 -lvl 4 -y 350 -defaultsOSRD
 preplace inst axis_red_pitaya_dac_0 -pg 1 -lvl 5 -y 250 -defaultsOSRD
+preplace inst canc_phase_offset -pg 1 -lvl 1 -y 80 -defaultsOSRD
 preplace netloc Conn1 1 0 1 NJ
 preplace netloc axis_red_pitaya_dac_0_dac_rst 1 5 1 NJ
-preplace netloc axis_constant_0_M_AXIS1 1 2 1 N
-preplace netloc canc_const_M_AXIS 1 2 1 490
+preplace netloc axis_constant_0_M_AXIS1 1 2 1 480
+preplace netloc canc_const_M_AXIS 1 2 1 N
+preplace netloc axi_cfg_register_0_cfg_data 1 1 1 250
 preplace netloc axis_red_pitaya_dac_0_dac_sel 1 5 1 NJ
 preplace netloc S_AXI1_1 1 0 1 NJ
 preplace netloc dac_signal_combiner_M_AXIS 1 4 1 N
-preplace netloc canc_cfg_cfg_data 1 1 1 250
+preplace netloc canc_cfg_cfg_data 1 1 1 N
 preplace netloc axis_red_pitaya_dac_0_dac_wrt 1 5 1 NJ
-preplace netloc axis_constant_0_M_AXIS 1 2 1 480
-preplace netloc cancellation_signal_M_AXIS_DATA 1 3 1 800
-preplace netloc xlconstant_0_dout 1 1 1 NJ
-preplace netloc clk_wiz_1_locked 1 4 1 1110
-preplace netloc clk_wiz_1_clk_out1 1 4 1 1090
-preplace netloc reference_signal_M_AXIS_DATA 1 3 1 N
-preplace netloc aresetn_1 1 0 1 30
+preplace netloc axis_constant_0_M_AXIS 1 2 1 N
+preplace netloc cancellation_signal_M_AXIS_DATA 1 3 1 N
+preplace netloc clk_wiz_1_locked 1 4 1 1100
+preplace netloc clk_wiz_1_clk_out1 1 4 1 1080
+preplace netloc reference_signal_M_AXIS_DATA 1 3 1 790
+preplace netloc aresetn_1 1 0 1 20
 preplace netloc sig_gen_config_cfg_data 1 1 1 N
 preplace netloc axis_red_pitaya_dac_0_dac_clk 1 5 1 NJ
-preplace netloc aresetn1_1 1 0 4 NJ 370 NJ 370 510 260 810
+preplace netloc S_AXI2 1 0 1 N
+preplace netloc aresetn1_1 1 0 4 NJ 280 NJ 280 500 290 800
 preplace netloc axis_red_pitaya_dac_0_dac_dat 1 5 1 NJ
-preplace netloc clk_sync_clk_out1 1 0 5 20 270 260 20 500 120 790 410 1100
-levelinfo -pg 1 0 140 370 650 950 1220 1350 -top 0 -bot 420
+preplace netloc clk_sync_clk_out1 1 0 5 30 420 260 260 490 130 780 410 1090
+levelinfo -pg 1 0 140 370 640 940 1210 1340 -top 0 -bot 430
 ",
 }
 0
