--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_c18cdc96.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_c18cdc96.ui
@@ -1,39 +1,41 @@
 {
    guistr: "# # String gsaved with Nlview 6.5.12  2016-01-29 bk=1.3547 VDI=39 GEI=35 GUI=JA:1.6
 #  -string -flagsOSRD
-preplace port M_AXI1 -pg 1 -y 430 -defaultsOSRD
-preplace port ch_a_status -pg 1 -y 80 -defaultsOSRD
-preplace port S_AXI -pg 1 -y 150 -defaultsOSRD
-preplace port M_AXI -pg 1 -y 130 -defaultsOSRD
-preplace port int_clk -pg 1 -y 310 -defaultsOSRD
-preplace port aclk -pg 1 -y 20 -defaultsOSRD
-preplace port ch_b_status -pg 1 -y 400 -defaultsOSRD
-preplace port adc_csn -pg 1 -y 320 -defaultsOSRD
-preplace portBus enable -pg 1 -y 420 -defaultsOSRD
-preplace portBus adc_dat_a -pg 1 -y 330 -defaultsOSRD
-preplace portBus adc_dat_b -pg 1 -y 350 -defaultsOSRD
-preplace portBus decimation -pg 1 -y 230 -defaultsOSRD
-preplace portBus aresetn -pg 1 -y 190 -defaultsOSRD
-preplace inst adc_streamer -pg 1 -lvl 1 -y 320 -defaultsOSRD
-preplace inst channel_a -pg 1 -lvl 2 -y 130 -defaultsOSRD
-preplace inst channel_b -pg 1 -lvl 2 -y 430 -defaultsOSRD
-preplace inst config_settings -pg 1 -lvl 1 -y 170 -defaultsOSRD
-preplace netloc S_AXI_1 1 0 2 NJ 400 NJ
+preplace port M_AXI1 -pg 1 -y 470 -defaultsOSRD
+preplace port ch_a_status -pg 1 -y 140 -defaultsOSRD
+preplace port S_AXI -pg 1 -y 50 -defaultsOSRD
+preplace port M_AXI -pg 1 -y 190 -defaultsOSRD
+preplace port int_clk -pg 1 -y 350 -defaultsOSRD
+preplace port aclk -pg 1 -y 80 -defaultsOSRD
+preplace port ch_b_status -pg 1 -y 440 -defaultsOSRD
+preplace port adc_csn -pg 1 -y 360 -defaultsOSRD
+preplace portBus enable -pg 1 -y 460 -defaultsOSRD
+preplace portBus adc_dat_a -pg 1 -y 370 -defaultsOSRD
+preplace portBus adc_dat_b -pg 1 -y 390 -defaultsOSRD
+preplace portBus decimation -pg 1 -y 290 -defaultsOSRD
+preplace portBus aresetn -pg 1 -y 90 -defaultsOSRD
+preplace inst adc_streamer -pg 1 -lvl 1 -y 360 -defaultsOSRD
+preplace inst anti_aliasing_filter -pg 1 -lvl 1 -y 210 -defaultsOSRD
+preplace inst channel_a -pg 1 -lvl 2 -y 190 -defaultsOSRD
+preplace inst channel_b -pg 1 -lvl 2 -y 470 -defaultsOSRD
+preplace inst config_settings -pg 1 -lvl 1 -y 70 -defaultsOSRD
+preplace netloc S_AXI_1 1 0 2 NJ 440 NJ
 preplace netloc channel_b_M_AXI 1 2 1 NJ
-preplace netloc axis_red_pitaya_adc_0_adc_csn 1 1 2 NJ 320 NJ
+preplace netloc axis_red_pitaya_adc_0_adc_csn 1 1 2 NJ 360 NJ
 preplace netloc adc_dat_a_i_1 1 0 1 NJ
+preplace netloc anti_aliasing_filter_M_AXIS_DATA 1 1 1 330
+preplace netloc adc_streamer_m00_axis 1 0 2 40 150 320
 preplace netloc ps_0_axi_periph_M00_AXI 1 0 1 NJ
-preplace netloc adc_streamer_m00_axis 1 1 1 280
-preplace netloc s00_axis_1 1 1 1 280
+preplace netloc s00_axis_1 1 1 1 360
 preplace netloc clk_wiz_0_clk_out1 1 0 1 NJ
-preplace netloc ps_axi_periph_M01_AXI 1 0 2 NJ 80 NJ
+preplace netloc ps_axi_periph_M01_AXI 1 0 2 NJ 140 NJ
 preplace netloc adc_dat_b_i_1 1 0 1 NJ
-preplace netloc aresetn2_1 1 0 2 20 240 320
+preplace netloc aresetn2_1 1 0 2 20 280 380
 preplace netloc axis_ram_writer_0_M_AXI 1 2 1 NJ
-preplace netloc enable_1 1 0 2 NJ 420 290
-preplace netloc clk_sync_clk_out1 1 0 3 20 90 300 20 NJ
-preplace netloc xlslice_0_Dout 1 1 2 310 230 NJ
-levelinfo -pg 1 0 150 450 590 -top 0 -bot 530
+preplace netloc enable_1 1 0 2 NJ 460 350
+preplace netloc clk_sync_clk_out1 1 0 3 30 270 370 80 NJ
+preplace netloc xlslice_0_Dout 1 1 2 340 290 NJ
+levelinfo -pg 1 0 180 510 650 -top 0 -bot 570
 ",
 }
 0
