--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_f066970c.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_f066970c.ui
@@ -10,20 +10,17 @@ preplace portBus decimation -pg 1 -y 110 -defaultsOSRD
 preplace portBus aresetn -pg 1 -y 260 -defaultsOSRD
 preplace inst ch_a_writer -pg 1 -lvl 3 -y 170 -defaultsOSRD
 preplace inst ram_a_address -pg 1 -lvl 2 -y 230 -defaultsOSRD
-preplace inst axis_decimator_0 -pg 1 -lvl 1 -y 80 -defaultsOSRD
 preplace inst sts_a_channel -pg 1 -lvl 1 -y 250 -defaultsOSRD
 preplace inst axis_dwidth_converter_0 -pg 1 -lvl 2 -y 100 -defaultsOSRD
 preplace netloc Conn1 1 0 1 NJ
 preplace netloc ram_a_address_dout 1 2 1 NJ
 preplace netloc axis_dwidth_converter_0_M_AXIS 1 2 1 470
-preplace netloc adc_data_1 1 0 1 NJ
-preplace netloc cfg_data_1 1 0 1 NJ
-preplace netloc axis_decimator_0_m_axis 1 1 1 N
-preplace netloc aresetn_1 1 0 3 20 160 260 30 NJ
+preplace netloc adc_data_1 1 0 2 NJ 50 230
+preplace netloc aresetn_1 1 0 3 N 90 250 30 NJ
 preplace netloc ch_a_writer_sts_data 1 0 4 20 330 NJ 330 NJ 330 740
 preplace netloc axis_ram_writer_0_M_AXI 1 3 1 N
 preplace netloc aresetn1_1 1 0 1 NJ
-preplace netloc clk_sync_clk_out1 1 0 3 30 170 250 10 NJ
+preplace netloc clk_sync_clk_out1 1 0 3 20 70 240 10 NJ
 levelinfo -pg 1 0 140 360 610 760 -top 0 -bot 340
 ",
 }
