--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_c18cdc96.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_c18cdc96.ui
@@ -1,41 +1,40 @@
 {
    guistr: "# # String gsaved with Nlview 6.5.12  2016-01-29 bk=1.3547 VDI=39 GEI=35 GUI=JA:1.6
 #  -string -flagsOSRD
-preplace port M_AXI1 -pg 1 -y 470 -defaultsOSRD
-preplace port ch_a_status -pg 1 -y 140 -defaultsOSRD
-preplace port S_AXI -pg 1 -y 50 -defaultsOSRD
-preplace port M_AXI -pg 1 -y 190 -defaultsOSRD
-preplace port int_clk -pg 1 -y 350 -defaultsOSRD
-preplace port aclk -pg 1 -y 80 -defaultsOSRD
-preplace port ch_b_status -pg 1 -y 440 -defaultsOSRD
-preplace port adc_csn -pg 1 -y 360 -defaultsOSRD
-preplace portBus enable -pg 1 -y 460 -defaultsOSRD
-preplace portBus adc_dat_a -pg 1 -y 370 -defaultsOSRD
-preplace portBus adc_dat_b -pg 1 -y 390 -defaultsOSRD
-preplace portBus decimation -pg 1 -y 290 -defaultsOSRD
-preplace portBus aresetn -pg 1 -y 90 -defaultsOSRD
-preplace inst adc_streamer -pg 1 -lvl 1 -y 360 -defaultsOSRD
-preplace inst anti_aliasing_filter -pg 1 -lvl 1 -y 210 -defaultsOSRD
-preplace inst channel_a -pg 1 -lvl 2 -y 190 -defaultsOSRD
-preplace inst channel_b -pg 1 -lvl 2 -y 470 -defaultsOSRD
-preplace inst config_settings -pg 1 -lvl 1 -y 70 -defaultsOSRD
-preplace netloc S_AXI_1 1 0 2 NJ 440 NJ
-preplace netloc channel_b_M_AXI 1 2 1 NJ
-preplace netloc axis_red_pitaya_adc_0_adc_csn 1 1 2 NJ 360 NJ
+preplace port M_AXI1 -pg 1 -y 450 -defaultsOSRD
+preplace port ch_a_status -pg 1 -y 230 -defaultsOSRD
+preplace port S_AXI -pg 1 -y 580 -defaultsOSRD
+preplace port M_AXI -pg 1 -y 280 -defaultsOSRD
+preplace port int_clk -pg 1 -y 310 -defaultsOSRD
+preplace port aclk -pg 1 -y 90 -defaultsOSRD
+preplace port ch_b_status -pg 1 -y 410 -defaultsOSRD
+preplace port adc_csn -pg 1 -y 180 -defaultsOSRD
+preplace portBus enable -pg 1 -y 430 -defaultsOSRD
+preplace portBus adc_dat_a -pg 1 -y 330 -defaultsOSRD
+preplace portBus adc_dat_b -pg 1 -y 370 -defaultsOSRD
+preplace portBus aresetn -pg 1 -y 350 -defaultsOSRD
+preplace inst adc_streamer -pg 1 -lvl 1 -y 320 -defaultsOSRD
+preplace inst anti_aliasing -pg 1 -lvl 2 -y 320 -defaultsOSRD
+preplace inst channel_a -pg 1 -lvl 3 -y 280 -defaultsOSRD
+preplace inst channel_b -pg 1 -lvl 3 -y 450 -defaultsOSRD
+preplace inst config_settings -pg 1 -lvl 3 -y 600 -defaultsOSRD
+preplace netloc S_AXI_1 1 0 3 NJ 410 NJ 410 NJ
+preplace netloc axis_broadcaster_0_M00_AXIS 1 2 1 280
+preplace netloc channel_b_M_AXI 1 3 1 NJ
+preplace netloc axis_red_pitaya_adc_0_adc_csn 1 1 3 30 180 N 180 NJ
+preplace netloc axis_broadcaster_0_M01_AXIS 1 2 1 280
 preplace netloc adc_dat_a_i_1 1 0 1 NJ
-preplace netloc ps_0_axi_periph_M00_AXI 1 0 1 NJ
-preplace netloc anti_aliasing_filter_M_AXIS_DATA 1 1 1 330
-preplace netloc adc_streamer_m00_axis 1 0 2 40 150 320
-preplace netloc s00_axis_1 1 1 1 360
+preplace netloc adc_streamer_m00_axis 1 1 1 NJ
+preplace netloc ps_0_axi_periph_M00_AXI 1 0 3 NJ 580 NJ 580 NJ
+preplace netloc adc_streamer_m01_axis 1 1 1 NJ
 preplace netloc clk_wiz_0_clk_out1 1 0 1 NJ
-preplace netloc ps_axi_periph_M01_AXI 1 0 2 NJ 140 NJ
+preplace netloc ps_axi_periph_M01_AXI 1 0 3 NJ 230 NJ 230 NJ
 preplace netloc adc_dat_b_i_1 1 0 1 NJ
-preplace netloc aresetn2_1 1 0 2 20 280 380
-preplace netloc axis_ram_writer_0_M_AXI 1 2 1 NJ
-preplace netloc enable_1 1 0 2 NJ 460 350
-preplace netloc clk_sync_clk_out1 1 0 3 30 270 370 80 NJ
-preplace netloc xlslice_0_Dout 1 1 2 340 290 NJ
-levelinfo -pg 1 0 180 510 650 -top 0 -bot 570
+preplace netloc aresetn2_1 1 0 3 -220 400 40 400 300
+preplace netloc axis_ram_writer_0_M_AXI 1 3 1 NJ
+preplace netloc enable_1 1 0 3 NJ 430 N 430 270
+preplace netloc clk_sync_clk_out1 1 1 3 40 210 290 90 N
+levelinfo -pg 1 -240 -90 160 430 590 -top 0 -bot 670
 ",
 }
 0
