--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_4e2a1547.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_4e2a1547.ui
@@ -1,18 +1,31 @@
 {
    guistr: "# # String gsaved with Nlview 6.5.12  2016-01-29 bk=1.3547 VDI=39 GEI=35 GUI=JA:1.6
 #  -string -flagsOSRD
-preplace port S_AXI -pg 1 -y 50 -defaultsOSRD
-preplace port aclk -pg 1 -y 70 -defaultsOSRD
-preplace portBus decimation -pg 1 -y 70 -defaultsOSRD
-preplace portBus aresetn -pg 1 -y 90 -defaultsOSRD
-preplace inst xlslice_0 -pg 1 -lvl 2 -y 70 -defaultsOSRD
-preplace inst cfg -pg 1 -lvl 1 -y 70 -defaultsOSRD
-preplace netloc cfg_0_cfg_data 1 1 1 NJ
+preplace port integration -pg 1 -y 80 -defaultsOSRD
+preplace port aclk -pg 1 -y 100 -defaultsOSRD
+preplace port index -pg 1 -y 210 -defaultsOSRD
+preplace portBus n_samples -pg 1 -y 140 -defaultsOSRD
+preplace portBus start_index -pg 1 -y 230 -defaultsOSRD
+preplace portBus stop_index -pg 1 -y 320 -defaultsOSRD
+preplace portBus int_factor -pg 1 -y 50 -defaultsOSRD
+preplace portBus aresetn -pg 1 -y 120 -defaultsOSRD
+preplace inst index_config -pg 1 -lvl 1 -y 230 -defaultsOSRD
+preplace inst xlslice_0 -pg 1 -lvl 2 -y 230 -defaultsOSRD
+preplace inst xlslice_1 -pg 1 -lvl 2 -y 320 -defaultsOSRD
+preplace inst xlslice_2 -pg 1 -lvl 2 -y 140 -defaultsOSRD
+preplace inst xlslice_3 -pg 1 -lvl 2 -y 50 -defaultsOSRD
+preplace inst int_config -pg 1 -lvl 1 -y 100 -defaultsOSRD
+preplace netloc xlslice_3_Dout 1 2 1 NJ
+preplace netloc int_config_cfg_data 1 1 1 250
+preplace netloc xlslice_1_Dout 1 2 1 NJ
+preplace netloc cfg_0_cfg_data 1 1 1 250
 preplace netloc ps_0_axi_periph_M00_AXI 1 0 1 NJ
-preplace netloc xlconstant_0_dout 1 0 1 NJ
-preplace netloc clk_sync_clk_out1 1 0 1 NJ
+preplace netloc xlconstant_0_dout 1 0 1 20
+preplace netloc xlslice_2_Dout 1 2 1 NJ
+preplace netloc int_config 1 0 1 N
+preplace netloc clk_sync_clk_out1 1 0 1 30
 preplace netloc xlslice_0_Dout 1 2 1 NJ
-levelinfo -pg 1 0 130 350 470 -top 0 -bot 140
+levelinfo -pg 1 0 140 350 470 -top 0 -bot 370
 ",
 }
 0
