--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_c18cdc96.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_c18cdc96.ui
@@ -1,47 +1,54 @@
 {
    guistr: "# # String gsaved with Nlview 6.5.12  2016-01-29 bk=1.3547 VDI=39 GEI=35 GUI=JA:1.6
 #  -string -flagsOSRD
-preplace port M_AXI1 -pg 1 -y 430 -defaultsOSRD
-preplace port ch_a_status -pg 1 -y 180 -defaultsOSRD
-preplace port S_AXI -pg 1 -y 50 -defaultsOSRD
-preplace port M_AXI -pg 1 -y 220 -defaultsOSRD
+preplace port index_config -pg 1 -y 240 -defaultsOSRD
+preplace port M_AXI1 -pg 1 -y 330 -defaultsOSRD
+preplace port ch_a_status -pg 1 -y 50 -defaultsOSRD
+preplace port adc_clk -pg 1 -y 440 -defaultsOSRD
+preplace port M_AXI -pg 1 -y 90 -defaultsOSRD
 preplace port int_clk -pg 1 -y 610 -defaultsOSRD
-preplace port aclk -pg 1 -y 540 -defaultsOSRD
-preplace port ch_b_status -pg 1 -y 480 -defaultsOSRD
+preplace port aclk -pg 1 -y 420 -defaultsOSRD
+preplace port int_config -pg 1 -y 260 -defaultsOSRD
+preplace port ch_b_status -pg 1 -y 520 -defaultsOSRD
 preplace port adc_csn -pg 1 -y 650 -defaultsOSRD
-preplace portBus enable -pg 1 -y 460 -defaultsOSRD
+preplace portBus enable -pg 1 -y 180 -defaultsOSRD
 preplace portBus adc_dat_a -pg 1 -y 630 -defaultsOSRD
 preplace portBus adc_dat_b -pg 1 -y 650 -defaultsOSRD
-preplace portBus aresetn -pg 1 -y 420 -defaultsOSRD
+preplace portBus aresetn -pg 1 -y 300 -defaultsOSRD
 preplace inst adc_streamer -pg 1 -lvl 4 -y 620 -defaultsOSRD
-preplace inst anti_aliasing -pg 1 -lvl 2 -y 390 -defaultsOSRD
-preplace inst channel_a -pg 1 -lvl 4 -y 220 -defaultsOSRD
-preplace inst c_counter_binary_0 -pg 1 -lvl 1 -y 250 -defaultsOSRD
-preplace inst profile_integration -pg 1 -lvl 3 -y 260 -defaultsOSRD
-preplace inst channel_b -pg 1 -lvl 4 -y 430 -defaultsOSRD
-preplace inst axis_constant_0 -pg 1 -lvl 2 -y 240 -defaultsOSRD
-preplace inst config_settings -pg 1 -lvl 4 -y 70 -defaultsOSRD
-preplace inst axis_dwidth_converter_1 -pg 1 -lvl 3 -y 410 -defaultsOSRD
-preplace netloc S_AXI_1 1 0 4 NJ 480 NJ 480 NJ 480 NJ
-preplace netloc anti_aliasing_M01_AXIS 1 2 1 470
+preplace inst anti_aliasing -pg 1 -lvl 2 -y 440 -defaultsOSRD
+preplace inst channel_a -pg 1 -lvl 4 -y 90 -defaultsOSRD
+preplace inst c_counter_binary_0 -pg 1 -lvl 1 -y 120 -defaultsOSRD
+preplace inst profile_integration -pg 1 -lvl 3 -y 320 -defaultsOSRD
+preplace inst channel_b -pg 1 -lvl 4 -y 330 -defaultsOSRD
+preplace inst axis_constant_0 -pg 1 -lvl 2 -y 110 -defaultsOSRD
+preplace inst config_settings -pg 1 -lvl 2 -y 270 -defaultsOSRD
+preplace inst axis_dwidth_converter_1 -pg 1 -lvl 3 -y 120 -defaultsOSRD
+preplace netloc S_AXI_1 1 0 4 NJ 50 NJ 50 NJ 200 NJ
+preplace netloc anti_aliasing_M01_AXIS 1 2 1 530
+preplace netloc S_AXI1_1 1 0 2 NJ 260 NJ
 preplace netloc channel_b_M_AXI 1 4 1 NJ
 preplace netloc axis_red_pitaya_adc_0_adc_csn 1 4 1 NJ
-preplace netloc axis_constant_0_M_AXIS 1 2 1 N
+preplace netloc axis_constant_0_M_AXIS 1 2 1 540
 preplace netloc adc_dat_a_i_1 1 0 4 NJ 630 NJ 630 NJ 630 NJ
-preplace netloc ps_0_axi_periph_M00_AXI 1 0 4 NJ 50 NJ 50 NJ 50 NJ
-preplace netloc adc_streamer_m00_axis 1 1 4 220 520 NJ 520 NJ 520 980
+preplace netloc ps_0_axi_periph_M00_AXI 1 0 2 NJ 240 NJ
+preplace netloc adc_streamer_m00_axis 1 1 4 220 540 NJ 540 NJ 540 1100
+preplace netloc config_settings_int_factor 1 2 1 490
+preplace netloc config_settings_n_samples 1 2 1 510
 preplace netloc c_counter_binary_0_Q 1 1 1 NJ
-preplace netloc adc_streamer_m01_axis 1 1 4 230 530 NJ 530 NJ 530 970
+preplace netloc adc_streamer_m01_axis 1 1 4 230 520 NJ 520 NJ 520 1110
+preplace netloc config_settings_stop_index 1 2 1 500
 preplace netloc clk_wiz_0_clk_out1 1 0 4 NJ 610 NJ 610 NJ 610 NJ
-preplace netloc S_AXIS_1 1 3 1 670
-preplace netloc ps_axi_periph_M01_AXI 1 0 4 NJ 180 NJ 180 NJ 180 NJ
+preplace netloc S_AXIS_1 1 3 1 840
+preplace netloc ps_axi_periph_M01_AXI 1 0 4 NJ 10 NJ 10 NJ 10 NJ
 preplace netloc adc_dat_b_i_1 1 0 4 NJ 650 NJ 650 NJ 650 NJ
-preplace netloc axis_dwidth_converter_1_M_AXIS 1 3 1 N
-preplace netloc aresetn2_1 1 0 4 NJ 420 210 490 NJ 490 690
+preplace netloc axis_dwidth_converter_1_M_AXIS 1 3 1 830
+preplace netloc aresetn2_1 1 0 4 NJ 300 210 180 NJ 190 860
 preplace netloc axis_ram_writer_0_M_AXI 1 4 1 NJ
-preplace netloc enable_1 1 0 4 NJ 460 NJ 470 460 340 710
-preplace netloc clk_sync_clk_out1 1 0 5 20 200 210 300 450 330 680 540 990
-levelinfo -pg 1 0 110 340 570 840 1010 -top 0 -bot 700
+preplace netloc config_settings_start_index 1 2 1 520
+preplace netloc enable_1 1 0 4 NJ 20 NJ 20 550 50 810
+preplace netloc clk_sync_clk_out1 1 0 5 20 170 200 30 570 30 850 230 1120
+levelinfo -pg 1 -30 110 360 690 980 1140 -top 0 -bot 700
 ",
 }
 0
