--- a/fpga/milosar.srcs/sources_1/bd/system/ui/bd_f6ee486c.ui
+++ b/fpga/milosar.srcs/sources_1/bd/system/ui/bd_f6ee486c.ui
@@ -1,37 +1,41 @@
 {
    guistr: "# # String gsaved with Nlview 6.5.12  2016-01-29 bk=1.3547 VDI=39 GEI=35 GUI=JA:1.6
 #  -string -flagsOSRD
-preplace port S_AXI_HP1 -pg 1 -y 130 -defaultsOSRD
-preplace port DDR -pg 1 -y 60 -defaultsOSRD
-preplace port M01_AXI -pg 1 -y 250 -defaultsOSRD
-preplace port slowest_sync_clk -pg 1 -y 150 -defaultsOSRD
-preplace port M04_AXI -pg 1 -y 310 -defaultsOSRD
-preplace port M03_AXI -pg 1 -y 290 -defaultsOSRD
-preplace port FIXED_IO -pg 1 -y 80 -defaultsOSRD
-preplace port M05_AXI -pg 1 -y 210 -defaultsOSRD
-preplace port M02_AXI -pg 1 -y 270 -defaultsOSRD
-preplace port M00_AXI -pg 1 -y 230 -defaultsOSRD
-preplace port S_AXI_HP0 -pg 1 -y 110 -defaultsOSRD
-preplace portBus ARESETN -pg 1 -y 100 -defaultsOSRD
+preplace port M07_AXI -pg 1 -y 320 -defaultsOSRD
+preplace port S_AXI_HP1 -pg 1 -y 590 -defaultsOSRD
+preplace port DDR -pg 1 -y 520 -defaultsOSRD
+preplace port M06_AXI -pg 1 -y 300 -defaultsOSRD
+preplace port M01_AXI -pg 1 -y 200 -defaultsOSRD
+preplace port slowest_sync_clk -pg 1 -y 610 -defaultsOSRD
+preplace port M04_AXI -pg 1 -y 260 -defaultsOSRD
+preplace port M03_AXI -pg 1 -y 240 -defaultsOSRD
+preplace port FIXED_IO -pg 1 -y 540 -defaultsOSRD
+preplace port M05_AXI -pg 1 -y 280 -defaultsOSRD
+preplace port M02_AXI -pg 1 -y 220 -defaultsOSRD
+preplace port M00_AXI -pg 1 -y 180 -defaultsOSRD
+preplace port S_AXI_HP0 -pg 1 -y 570 -defaultsOSRD
+preplace portBus ARESETN -pg 1 -y 500 -defaultsOSRD
 preplace inst ps_axi_periph -pg 1 -lvl 2 -y 250 -defaultsOSRD
-preplace inst sys_reset_controller -pg 1 -lvl 1 -y 360 -defaultsOSRD
-preplace inst ps_0 -pg 1 -lvl 1 -y 130 -defaultsOSRD
-preplace netloc Conn1 1 2 1 810
+preplace inst sys_reset_controller -pg 1 -lvl 1 -y 340 -defaultsOSRD
+preplace inst ps_0 -pg 1 -lvl 1 -y 590 -defaultsOSRD
+preplace netloc ps_axi_periph_M06_AXI 1 2 1 NJ
+preplace netloc Conn1 1 2 1 NJ
 preplace netloc S_AXI_1 1 2 1 NJ
-preplace netloc Conn2 1 2 1 800
+preplace netloc Conn2 1 2 1 NJ
 preplace netloc channel_b_M_AXI 1 0 1 NJ
-preplace netloc ps_axi_periph_M05_AXI 1 2 1 840
-preplace netloc ps_0_M_AXI_GP0 1 1 1 490
+preplace netloc ps_axi_periph_M07_AXI 1 2 1 NJ
+preplace netloc ps_axi_periph_M05_AXI 1 2 1 NJ
+preplace netloc ps_0_M_AXI_GP0 1 1 1 480
 preplace netloc ps_0_axi_periph_M00_AXI 1 2 1 NJ
-preplace netloc xlconstant_0_dout 1 1 2 480 -10 NJ
+preplace netloc xlconstant_0_dout 1 1 2 510 510 NJ
 preplace netloc ps_axi_periph_M01_AXI 1 2 1 NJ
-preplace netloc ps_0_DDR 1 1 2 NJ 0 NJ
-preplace netloc rst_0_interconnect_aresetn 1 1 1 500
-preplace netloc ps_0_FCLK_RESET0_N 1 0 2 0 270 450
-preplace netloc ps_0_FIXED_IO 1 1 2 NJ 10 NJ
+preplace netloc ps_0_DDR 1 1 2 NJ 520 NJ
+preplace netloc rst_0_interconnect_aresetn 1 1 1 490
+preplace netloc ps_0_FCLK_RESET0_N 1 0 2 30 450 470
+preplace netloc ps_0_FIXED_IO 1 1 2 NJ 540 NJ
 preplace netloc axis_ram_writer_0_M_AXI 1 0 1 NJ
-preplace netloc clk_sync_clk_out1 1 0 2 -10 -10 470
-levelinfo -pg 1 -30 230 650 870 -top -20 -bot 490
+preplace netloc clk_sync_clk_out1 1 0 2 20 430 500
+levelinfo -pg 1 0 250 660 830 -top 0 -bot 730
 ",
 }
 0
